Fix layout issues with 400px screen

--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,19 @@ html {
 
 @media only screen and (min-width: 25em) {
 
+  .card {
+    margin: 0;
+  }
+
   .card-img,
   .card-body {
     display: inline-block;
+  }
+
+  .card-img {
+    vertical-align: top;
+    padding: .65em 0 0;
+    margin: 0;
   }
 
   .card-body {
